css/style.css
/* ... */
.view-all span {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

#ing-search-form {
  display: none;
  transform: translateY(-100%);
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 5rem;
  left: 0;
  width: 100%;
  background-color: transparent;
  border-radius: 0px 0px 4px 4px;
  padding: 1rem;
  z-index: 5;
}
.search-hide {
  display: flex !important;
  transform: translateY(0) !important;
}

.inp-append-div {
  display: flex;
  position: relative;
  min-width: 75%;
  width: auto;
  height: auto;
}
#close-search-bar {
  object-fit: contain;
  position: absolute;
  top: 0;
  left: 99%;
  background: #743ad5;
  font-size: larger;
  padding: 0.125rem;
  border-radius: 2px;
  cursor: pointer;
}

@media (max-width: 600px) {
  #close-search-bar {
    left: 97%;
  }
  #ing-search-form {
    justify-content: flex-start;
    top: 6.25rem;
  }
  .inp-append-div {
    min-width: 90%;
    width: auto;
  }
}
.inp-append-div ion-icon {
  color: black;
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translate(0, -50%);
}
#ing-search-text {
  font-family: inherit;
  width: 100%;
  height: 100%;
  padding-left: 35px;
  padding-right: 25px;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  outline: none;
  border: none;
  border-radius: 4px;
  background-color: white;
  color: #1b1b1b;
  outline: 1.5px solid snow;
}

.searched-meal-div {
  position: relative;
  height: auto;
  width: 100%;
  text-align: center;
  background: rgba(205, 204, 207, 0.5);
  border-top: 2px solid #743ad5;
  border-left: 2px solid #743ad5;
  padding: 0.5rem;
  border-radius: 8px;
  margin-bottom: 1.25rem;
  box-shadow: 4px 6px 0px #d53a9d;
  transition: all ease 300ms;
}
.searched-meal-div:hover {
  border-top: 2px solid #d53a9d;
  border-left: 2px solid #d53a9d;
  box-shadow: 4px 6px 0px #743ad5;
}
.searched-meal-img {
  object-fit: contain;
  border-radius: 100%;
  border: solid 2px transparent;
  background-image: linear-gradient(white, white),
    radial-gradient(circle at top left, #743ad5, #d53a9d);
  background-origin: border-box;
  background-clip: content-box, border-box;
  transition: all ease 300ms;
}
.searched-meal-img:hover {
  position: relative;
  height: 150px !important;
  width: 150px !important;
}
#ing-tag {
  text-align: start;
  margin-left: 10px;
  opacity: 0.5;
}
#view-all-loader {
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden !important;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(27, 27, 27, 0.5);
  z-index: 10;
  visibility: hidden;
}

.meal-info-wrapper {
  position: relative;
  height: 100%;
  display: grid;
  grid-template-columns: 7.5fr 0fr 2.5fr;
  grid-column-gap: 1rem;
  justify-content: flex-start;
  align-items: flex-start;
  /* gap: 1rem; */
  /* flex-wrap: wrap; */
  margin-bottom: 2.5rem;
}
@media (max-width: 900px) {
  .meal-info-wrapper {
    /* grid-template-columns: 1fr 0fr 0fr !important; */
    /* make each column 100% */
    grid-template-columns: 1fr !important;
    /* grid-template-rows: 1fr 0fr 1fr !important; */
  }
  .meal-details {
    border-bottom: 1px solid #1b1b1b;
    margin-bottom: 1rem;
  }
  .meal-ingredients {
    margin-top: 1rem;
  }
}
.meal-details {
  /* width: 75%; */
  height: 100%;
  /* border: 1px solid yellow; */
  /* padding-right: 1rem; */
  /* border-right: 1px solid #743ad5; */
}

.meal-info-wrapper .vertical-line {
  width: 1px;
  height: 100%;
  background-color: #1b1b1b;
  /* display: block; */
}
.meal-card {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
  /* border: 1px solid red; */
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid #1b1b1b;
}

.meal-card .meal-info {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}
.meal-card .meal-info h4 {
  font-size: x-large;
  font-weight: bold;
  color: #743ad5;
}
.recipe-tags > span {
  background: #1b1b1b;
  color: snow;
  border-radius: 20px;
  padding: 1px 8px;
  user-select: none;
  text-transform: lowercase;
  transition: all ease 300ms;
}

.meal-ingredients {
  /* border: 1px solid green; */
  text-align: start;
  width: auto;
  height: 100%;
  /* border-left: 1px solid #743ad5; */
  /* padding-left: 1rem; */
}

.meal-details .instructions {
  /* border: 1px solid blue; */
  text-align: justify;
  line-height: 2;
  width: 100%;
  font-size: larger;
}

.meal-info-wrapper .title {
  font-size: 1.75rem;
  font-weight: bold;
  color: #743ad5;
  margin-bottom: 1rem;
}

.meal-ingredients .ingredients-list {
  /* margin-inline-start: 20px; */
  list-style: none;
}

.meal-ingredients .ingredients-list li {
  font-size: 1.25rem;
  color: black;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5rem;
  margin-bottom: 0.5rem;
}

.meal-video-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1rem;
  margin-block: 2.5rem;
}

